--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -92,7 +92,7 @@
                 {field: 'device', width: 120, title: '试验装置'},
                 {field: 'person', width: 120, title: '试验人员'},
                 {field: 'temperature', width: 120, title: '温度'},
-                {field: 'stress', width: 120, title: '压力'},
+                {field: 'pressure', width: 120, title: '压力'},
                 {field: 'flow', width:120, title: '流量'},
                 {field: 'dirname', width:120, title: '文件名称'},
                 {title: '操作', width: 120, toolbar: '#currentTableBar', align: "center"}
