--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 <!--    导航-->
     <ul class="layui-nav" lay-filter="">
         <li class="layui-nav-item layui-this"><a href="./dir.html">文件管理</a></li>
-        <li class="layui-nav-item"><a href="./search.html">搜索</a></li>
+        <li class="layui-nav-item"><a href="./search1.html">搜索</a></li>
         <li class="layui-nav-item"><a href="./show1.html">显示</a></li>
     </ul>
 </div>
