--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -21,31 +21,31 @@
                         <div class="layui-inline">
                             <label class="layui-form-label">试验名称</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="name" autocomplete="off" class="layui-input">
+                                <input type="text" name="faultName" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">试验类型</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="testtype" autocomplete="off" class="layui-input">
+                                <input type="text" name="testType" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">试验人员</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="person" autocomplete="off" class="layui-input">
+                                <input type="text" name="member" autocomplete="off" class="layui-input">
                             </div>
                         </div>
-                        <div class="layui-inline">
-                            <label class="layui-form-label">试验日期</label>
-                            <div class="layui-input-inline">
-                                <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
-                            </div>
-                            <div class="layui-form-mid">-</div>
-                            <div class="layui-input-inline">
-                                <input type="text" name="date1" id="date1" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
+<!--                        <div class="layui-inline">-->
+<!--                            <label class="layui-form-label">试验日期</label>-->
+<!--                            <div class="layui-input-inline">-->
+<!--                                <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
+<!--                            </div>-->
+<!--                            <div class="layui-form-mid">-</div>-->
+<!--                            <div class="layui-input-inline">-->
+<!--                                <input type="text" name="date1" id="date1" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
+<!--                            </div>-->
+<!--                        </div>-->
                         <div class="layui-inline">
                             <button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
                         </div>
@@ -65,11 +65,12 @@
 </div>
 <script src="assets/layui/layui.js" charset="utf-8"></script>
 <script>
-    layui.use(['form', 'table','laydate'], function () {
+    layui.use(['form', 'table','laydate','jquery','util','form'], function () {
         var $ = layui.jquery,
             form = layui.form,
             table = layui.table,
             laydate =layui.laydate;
+        var util = layui.util;
         //日期
         laydate.render({
             elem: '#date'
@@ -80,17 +81,17 @@
 
         table.render({
             elem: '#currentTableId',
-            url: 'assets/table.json',
+            url: '/search',
             toolbar: '#toolbarDemo',
             cols: [[
                 {type: "checkbox", width: 50},
                 {field: 'id', width: 80, title: 'ID', sort: true},
-                {field: 'name', width: 120, title: '试验名称'},
-                {field: 'testtype', width: 120, title: '试验类型'},
+                {field: 'faultName', width: 120, title: '试验名称'},
+                {field: 'testType', width: 120, title: '试验类型'},
                 {field: 'degree', title: '试验程度', minWidth: 120},
                 {field: 'date',width:120, title: '试验日期',sort: true},
                 {field: 'device', width: 120, title: '试验装置'},
-                {field: 'person', width: 120, title: '试验人员'},
+                {field: 'member', width: 120, title: '试验人员'},
                 {field: 'temperature', width: 120, title: '温度'},
                 {field: 'pressure', width: 120, title: '压力'},
                 {field: 'flow', width:120, title: '流量'},
@@ -105,10 +106,8 @@
 
         // 监听搜索操作
         form.on('submit(data-search-btn)', function (data) {
+            // console.log(data);
             var result = JSON.stringify(data.field);
-            layer.alert(result, {
-                title: '最终的搜索信息'
-            });
 
             //执行搜索重载
             table.reload('currentTableId', {
