--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -16,36 +16,39 @@
         <fieldset class="table-search-fieldset">
             <legend>搜索信息</legend>
             <div style="margin: 10px 10px 10px 10px">
-                <form class="layui-form layui-form-pane" action="">
+                <form class="layui-form layui-form-pane">
                     <div class="layui-form-item">
                         <div class="layui-inline">
                             <label class="layui-form-label">试验名称</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="faultName" autocomplete="off" class="layui-input">
+                                <input type="text" name="faultName"
+                                       autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">试验类型</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="testType" autocomplete="off" class="layui-input">
+                                <input type="text" name="testType"
+                                       autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">试验人员</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="member" autocomplete="off" class="layui-input">
+                                <input type="text" name="member"
+                                       autocomplete="off" class="layui-input">
                             </div>
                         </div>
-<!--                        <div class="layui-inline">-->
-<!--                            <label class="layui-form-label">试验日期</label>-->
-<!--                            <div class="layui-input-inline">-->
-<!--                                <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
-<!--                            </div>-->
-<!--                            <div class="layui-form-mid">-</div>-->
-<!--                            <div class="layui-input-inline">-->
-<!--                                <input type="text" name="date1" id="date1" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <!--                        <div class="layui-inline">-->
+                        <!--                            <label class="layui-form-label">试验日期</label>-->
+                        <!--                            <div class="layui-input-inline">-->
+                        <!--                                <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
+                        <!--                            </div>-->
+                        <!--                            <div class="layui-form-mid">-</div>-->
+                        <!--                            <div class="layui-input-inline">-->
+                        <!--                                <input type="text" name="date1" id="date1" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
                         <div class="layui-inline">
                             <button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
                         </div>
@@ -63,14 +66,14 @@
 
     </div>
 </div>
-<script src="assets/layui/layui.js" charset="utf-8"></script>
+<script type="text/javascript" src="assets/layui/layui.js"></script>
+<script type="text/javascript" src="assets/config.js"></script>
 <script>
-    layui.use(['form', 'table','laydate','jquery','util','form'], function () {
+    layui.use(['form', 'table','laydate'], function () {
         var $ = layui.jquery,
             form = layui.form,
             table = layui.table,
             laydate =layui.laydate;
-        var util = layui.util;
         //日期
         laydate.render({
             elem: '#date'
@@ -79,46 +82,58 @@
             elem: '#date1'
         });
 
-        table.render({
-            elem: '#currentTableId',
-            url: '/search',
-            toolbar: '#toolbarDemo',
-            cols: [[
-                {type: "checkbox", width: 50},
-                {field: 'id', width: 80, title: 'ID', sort: true},
-                {field: 'faultName', width: 120, title: '试验名称'},
-                {field: 'testType', width: 120, title: '试验类型'},
-                {field: 'degree', title: '试验程度', minWidth: 120},
-                {field: 'date',width:120, title: '试验日期',sort: true},
-                {field: 'device', width: 120, title: '试验装置'},
-                {field: 'member', width: 120, title: '试验人员'},
-                {field: 'temperature', width: 120, title: '温度'},
-                {field: 'pressure', width: 120, title: '压力'},
-                {field: 'flow', width:120, title: '流量'},
-                {field: 'dirname', width:120, title: '文件名称'},
-                {title: '操作', width: 120, toolbar: '#currentTableBar', align: "center"}
-            ]],
-            limits: [10,15],
-            limit: 15,
-            page: true,
-            skin: 'line'
-        });
-
         // 监听搜索操作
         form.on('submit(data-search-btn)', function (data) {
-            // console.log(data);
-            var result = JSON.stringify(data.field);
-
-            //执行搜索重载
-            table.reload('currentTableId', {
-                page: {
-                    curr: 1
+            var param=data.field;
+            table.render({
+                elem: '#currentTableId',
+                url: '/search',
+                method:'post',
+                toolbar: '#toolbarDemo'
+                ,request: {
+                    pageName: 'pageNum' //页码的参数名称，默认：page
+                    ,limitName: 'pageSize' //每页数据量的参数名，默认：limit
                 }
-                , where: {
-                    searchParams: result
+                ,where:{
+                    faultName:param.faultName,
+                    testType:param.testType,
+                    member:param.member
                 }
-            }, 'data');
-
+                ,parseData: function(res){ //res 即为原始返回的数据
+                    return {
+                        "code": 0, //解析接口状态
+                        "msg": "", //解析提示文本
+                        "count": res.length, //解析数据长度
+                        "data": res //解析数据列表
+                    };
+                }
+                ,page: { //支持传入 laypage 组件的所有参数（某些参数除外，如：jump/elem） - 详见文档
+                    layout: ['limit', 'count', 'prev', 'page', 'next'] //自定义分页布局
+                    ,groups: 3 //只显示 3 个连续页码
+                    ,first: '首页' //首页
+                    ,prev: '上一页'
+                    ,next: '下一页'
+                    ,last: '尾页' //尾页
+                    ,limit:6
+                    ,limits:[6,12,18]
+                },
+                cols: [[
+                    {type: "checkbox", width: 50},
+                    {field: 'id', width: 80, title: 'ID', sort: true},
+                    {field: 'faultName', width: 120, title: '试验名称'},
+                    {field: 'testType', width: 120, title: '试验类型'},
+                    {field: 'degree', title: '试验程度', minWidth: 120},
+                    {field: 'time',width:120, title: '试验日期',sort: true},
+                    {field: 'device', width: 120, title: '试验装置'},
+                    {field: 'member', width: 120, title: '试验人员'},
+                    {field: 'temperature', width: 120, title: '温度'},
+                    {field: 'stress', width: 120, title: '压力'},
+                    {field: 'flow', width:120, title: '流量'},
+                    {field: 'filename', width:120, title: '文件名称'},
+                    {field: 'path', width:120, title: '文件路劲'},
+                    {title: '操作', width: 120, toolbar: '#currentTableBar', align: "center"}
+                ]],
+            });
             return false;
         });
 
@@ -132,10 +147,39 @@
         });
 
         table.on('tool(currentTableFilter)', function (obj) {
-            var data = obj.data;
+
+
+            var data = obj.data; //获得当前行数据
+            var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+            var tr = obj.tr; //获得当前行 tr 的 DOM 对象（如果有的话）
+            console.log(data);
+            if(layEvent === 'show'){ //查看
+                //do somehing
+                console.log(data.path);
+                $.get(baseServer + 'api/show', {
+                    path: data.path
+                }, function (res) {
+                    layer.closeAll('loading');
+                    if (res.code == 200) {
+                        console.log("1");
+                    } else {
+                        console.log("2");
+                    }
+                });
+            }
             if (obj.event === 'delete') {
-                layer.confirm('真的删除行么', function (index) {
+                layer.confirm('确认删除选中行？', function (index) {
                     obj.del();
+                    $.get(baseServer + 'api/del', {
+                       path: data.path
+                    }, function (res) {
+                        layer.closeAll('loading');
+                        if (res.code == 200) {
+                            console.log("1");
+                        } else {
+                            console.log("2");
+                        }
+                    });
                     layer.close(index);
                 });
             }
