--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
     <ul class="layui-nav" lay-filter="">
         <li class="layui-nav-item layui-this"><a href="./dir.html">文件管理</a></li>
         <li class="layui-nav-item"><a href="./search.html">搜索</a></li>
-        <li class="layui-nav-item"><a href="./show1.html">显示</a></li>
+<!--        <li class="layui-nav-item"><a href="./show1.html">显示</a></li>-->
     </ul>
 </div>
 <!--    主体-->
@@ -35,6 +35,8 @@
 <script type="text/javascript" src="assets/layui/layui.js"></script>
 <script type="text/javascript" src="assets/clipboard.min.js"></script>
 <script type="text/javascript" src="assets/config.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="assets/layui/jquery.param.js"></script>
 <script>
     layui.use(['jquery', 'layer', 'element'], function () {
         var $ = layui.jquery;
