--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -68,6 +68,8 @@
 </div>
 <script type="text/javascript" src="assets/layui/layui.js"></script>
 <script type="text/javascript" src="assets/config.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="assets/layui/jquery.param.js"></script>
 <script>
     layui.use(['form', 'table','laydate'], function () {
         var $ = layui.jquery,
@@ -81,10 +83,19 @@
         laydate.render({
             elem: '#date1'
         });
-
-        // 监听搜索操作
-        form.on('submit(data-search-btn)', function (data) {
-            var param=data.field;
+        //保存搜索值，返回依然显示搜索后的页面
+        function firstRender(){
+            var faultName=sessionStorage.getItem("faultName");
+            var testType=sessionStorage.getItem("testType");
+            var member=sessionStorage.getItem("member");
+            if(faultName||testType||member){
+                tableRender(faultName,testType,member);
+            }
+        }
+        firstRender();
+        //渲染表格
+        function tableRender(faultName,testType,member){
+            var index=layer.msg("查询中，请稍候~",{icon:16,time:false,shade:0})
             table.render({
                 elem: '#currentTableId',
                 url: '/search',
@@ -95,9 +106,9 @@
                     ,limitName: 'pageSize' //每页数据量的参数名，默认：limit
                 }
                 ,where:{
-                    faultName:param.faultName,
-                    testType:param.testType,
-                    member:param.member
+                    faultName:faultName,
+                    testType:testType,
+                    member:member
                 }
                 ,parseData: function(res){ //res 即为原始返回的数据
                     return {
@@ -110,6 +121,7 @@
                 ,page: { //支持传入 laypage 组件的所有参数（某些参数除外，如：jump/elem） - 详见文档
                     layout: ['limit', 'count', 'prev', 'page', 'next'] //自定义分页布局
                     ,groups: 3 //只显示 3 个连续页码
+                    ,curr:1//初始在第一页
                     ,first: '首页' //首页
                     ,prev: '上一页'
                     ,next: '下一页'
@@ -118,8 +130,7 @@
                     ,limits:[6,12,18]
                 },
                 cols: [[
-                    {type: "checkbox", width: 50},
-                    {field: 'id', width: 80, title: 'ID', sort: true},
+                    // {field: 'id', width: 80, title: 'ID', sort: true},
                     {field: 'faultName', width: 120, title: '试验名称'},
                     {field: 'testType', width: 120, title: '试验类型'},
                     {field: 'degree', title: '试验程度', minWidth: 120},
@@ -133,7 +144,22 @@
                     {field: 'path', width:120, title: '文件路劲'},
                     {title: '操作', width: 120, toolbar: '#currentTableBar', align: "center"}
                 ]],
+                done:function (res) {
+
+                }
             });
+            layer.close(index);
+        }
+        // 监听搜索操作
+        form.on('submit(data-search-btn)', function (data) {
+            var param=data.field;
+            var faultName=param.faultName;
+            var testType=param.testType;
+            var member=param.member
+            sessionStorage.setItem("faultName",faultName);
+            sessionStorage.setItem("testType",testType);
+            sessionStorage.setItem("member",member);
+            tableRender(faultName,testType,member);
             return false;
         });
 
@@ -142,30 +168,22 @@
          */
 
         //监听表格复选框选择
-        table.on('checkbox(currentTableFilter)', function (obj) {
-            console.log(obj)
-        });
+        // table.on('checkbox(currentTableFilter)', function (obj) {
+        //     console.log(obj)
+        // });
 
         table.on('tool(currentTableFilter)', function (obj) {
-
-
             var data = obj.data; //获得当前行数据
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
             var tr = obj.tr; //获得当前行 tr 的 DOM 对象（如果有的话）
-            console.log(data);
+            // console.log(data);
             if(layEvent === 'show'){ //查看
                 //do somehing
-                console.log(data.path);
-                $.get(baseServer + 'api/show', {
-                    path: data.path
-                }, function (res) {
-                    layer.closeAll('loading');
-                    if (res.code == 200) {
-                        console.log("1");
-                    } else {
-                        console.log("2");
-                    }
-                });
+                var path=data.path;
+                var url="show1.html?path="+path;
+                // window.location.href=url;
+                window.open(url);
+
             }
             if (obj.event === 'delete') {
                 layer.confirm('确认删除选中行？', function (index) {
